force-app/main/default/objects/StripeLog__c/StripeLog__c.object-meta.xml
<CustomObject>
    <label>StripeLog</label>
    <nameField>
        <displayFormat>SL-{00000}</displayFormat>
        <label>StripeLog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>StripeLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>