force-app/main/default/objects/StripeLog__c/fields/ChargeBody__c.field-meta.xml
<CustomField>
    <fullName>ChargeBody__c</fullName>
    <label>ChargeBody</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>